[gd_scene load_steps=3 format=3 uid="uid://bap0hu2bh7rum"]

[ext_resource type="Script" path="res://src/scripts/menu.gd" id="1_b5u5a"]
[ext_resource type="PackedScene" uid="uid://c412lnrufpner" path="res://src/scenes/options.tscn" id="2_w4bpy"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -536.832
offset_top = -269.892
offset_right = 536.832
offset_bottom = 269.892
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b5u5a")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -50.5
offset_right = 350.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="PlayVRMode" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play VR mode"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -247.5
offset_top = -217.5
offset_right = 247.5
offset_bottom = 217.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.5
offset_top = -201.5
offset_right = 240.5
offset_bottom = 201.5
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsMenu" parent="Panel/MarginContainer2" instance=ExtResource("2_w4bpy")]
layout_mode = 2
size_flags_vertical = 0

[node name="Back" type="Button" parent="Panel/MarginContainer2"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayVRMode" to="." method="_on_play_vr_mode_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Panel/MarginContainer2/Back" to="." method="_on_options_pressed"]
